--- a/KnatteliganWPF/MainWindow.xaml
+++ b/KnatteliganWPF/MainWindow.xaml
@@ -5,26 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KnatteliganWPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Knatteligan" Height="350" Width="525">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="20"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-
-        <TextBlock Grid.Row ="2" FontWeight="Bold" >Manage existing leagues:</TextBlock>
-
-        <ListBox Name="LeagueList" Grid.Row="4" Grid.Column="0" Margin="5" MinWidth="150" MinHeight="200" MouseDoubleClick="ManageLeague_Clicked"/>
-        <Button Grid.Column="1" Margin="225,176,10,10" Grid.Row="4" Click="CreateLeague_Clicked" MaxHeight="20">Create a new league</Button>
-    </Grid>
+   <Frame Name="MainFrame"/>
+   </Grid>
 </Window>
