--- a/KnatteliganWPF/SetTeamSquadWindow.xaml
+++ b/KnatteliganWPF/SetTeamSquadWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:entities="clr-namespace:knatteligan.Domain.Entities;assembly=knatteligan"
         mc:Ignorable="d"
         Activated="WindowActivated"
-        Title="MatchProtocolWindow" Height="400" Width="400" d:DataContext="{d:DesignInstance }">
+        Title="MatchProtocolPage" Height="400" Width="400" d:DataContext="{d:DesignInstance }">
     <Grid Margin="0,0,2,0">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
