--- a/KnatteliganWPF/CreateLeaguePage.xaml
+++ b/KnatteliganWPF/CreateLeaguePage.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="KnatteliganWPF.CreateLeagueWindow"
+﻿<Page x:Class="KnatteliganWPF.CreateLeaguePage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,11 +7,11 @@
         xmlns:validationRules="clr-namespace:KnatteliganWPF.ValidationRules"
         xmlns:converters="clr-namespace:KnatteliganWPF.Converters"
         mc:Ignorable="d"
-        Title="CreateLeagueWindow" Height="400" Width="400">
-    <Window.Resources>
+        Title="CreateLeaguePage" Height="400" Width="400">
+    <Page.Resources>
         <converters:LeagueNameToStringConverter x:Key="LeagueNameToStringConverter"/>
         <converters:IsEnabledConverter x:Key="IsEnabledConverter"/>
-    </Window.Resources>
+    </Page.Resources>
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -62,7 +62,7 @@
 
         <Button Grid.Row="12" Grid.Column="5" Margin="5" Click="CloseCommandHandler_Click">Cancel</Button>
         
-        <Button Name="AddLeagueButton" Grid.Row="12" Grid.Column="6"  Margin="5" Content="Next" Click="AddLeague_Click">
+        <Button Name="AddLeagueButton" Grid.Row="12" Grid.Column="6"  Margin="5" Content="Add" Click="AddLeague_Click">
             <Button.IsEnabled>
                 <MultiBinding Converter="{StaticResource IsEnabledConverter}">
                     <Binding ElementName="leagueName" Path="(Validation.Errors)[0]"/>
@@ -73,4 +73,4 @@
         </Button>
 
     </Grid>
-</Window>
+</Page>
