--- a/KnatteliganWPF/MatchProtocolPage.xaml
+++ b/KnatteliganWPF/MatchProtocolPage.xaml
@@ -47,20 +47,20 @@
         <ListBox Name="AwayTeamList" Grid.ColumnSpan="3" Grid.RowSpan="7" Grid.Row="4" Grid.Column="4"
                  Margin="51,12,5,17" FontWeight="Bold" SelectionChanged="List_OnSelected" />
 
-        <Button Grid.Column="2" Grid.Row="4" Grid.ColumnSpan="2" HorizontalAlignment="Center"
-                Content="Add one Goal"
+        <Button Name="AddGoalButton" IsEnabled="{Binding ElementName=HomeTeamList.Count}" Grid.Column="2" Grid.Row="4" Grid.ColumnSpan="2" HorizontalAlignment="Center"
+                Content="Add Goal"
                 Click="AddGoal_OnClick" />
 
         <Button Grid.Column="2" Grid.Row="5" Grid.ColumnSpan="2" HorizontalAlignment="Center"
-                Content="Add one Assit"
+                Content="Add Assist"
                 Click="AddAssist_OnClick" />
 
         <Button Grid.Column="2" Grid.Row="6" Grid.ColumnSpan="2" HorizontalAlignment="Center"
-                Content="Add one YellowCard"
+                Content="Add YellowCard"
                 Click="AddYellowCard_OnClick" />
 
         <Button Grid.Column="2" Grid.Row="7" Grid.ColumnSpan="2" HorizontalAlignment="Center"
-                Content="Add one RedCard"
+                Content="Add RedCard"
                 Click="AddRedCard_OnClick" />
 
 
