--- a/UserHomePage/MainWindow.xaml
+++ b/UserHomePage/MainWindow.xaml
@@ -1,8 +1,9 @@
-﻿<Window x:Class="UserHomePage.MainWindow"
+﻿<Controls:MetroWindow x:Class="UserHomePage.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:local="clr-namespace:UserHomePage"
         mc:Ignorable="d"
         Title="MainWindow" Height="400" Width="400">
@@ -10,4 +11,4 @@
     <Grid>
         <Frame Name="MainFrame"/>
     </Grid>
-</Window>
+</Controls:MetroWindow>
