--- a/KnatteliganWPF/MatchProtocolPage.xaml
+++ b/KnatteliganWPF/MatchProtocolPage.xaml
@@ -9,6 +9,7 @@
         Title="MatchProtocolPage" Height="420" Width="500">
     <Page.Resources>
         <converters:MatchEventToStringConverter x:Key="MatchEventToStringConverter" />
+        <converters:IsSelectedMultiConverter x:Key="IsSelectedMultiConverter" />
     </Page.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -47,9 +48,17 @@
         <ListBox Name="AwayTeamList" Grid.ColumnSpan="3" Grid.RowSpan="7" Grid.Row="4" Grid.Column="4"
                  Margin="51,12,5,17" FontWeight="Bold" SelectionChanged="List_OnSelected" />
 
-        <Button Name="AddGoalButton" IsEnabled="{Binding ElementName=HomeTeamList.Count}" Grid.Column="2" Grid.Row="4" Grid.ColumnSpan="2" HorizontalAlignment="Center"
+        <Button Name="AddGoalButton"  Grid.Column="2" Grid.Row="4" Grid.ColumnSpan="2" HorizontalAlignment="Center"
                 Content="Add Goal"
-                Click="AddGoal_OnClick" />
+                Click="AddGoal_OnClick">
+            <Button.IsEnabled>
+            <MultiBinding Converter="{StaticResource IsSelectedMultiConverter}">
+                    <Binding ElementName="HomeTeamList" Path="SelectedItems.Count"/>
+                </MultiBinding>
+            </Button.IsEnabled>
+
+        </Button>
+            
 
         <Button Grid.Column="2" Grid.Row="5" Grid.ColumnSpan="2" HorizontalAlignment="Center"
                 Content="Add Assist"
