--- a/UserHomePage/SerieSchedulePage.xaml
+++ b/UserHomePage/SerieSchedulePage.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:UserHomePage"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
-      Title="SerieSchedulePage">
+      Title="SerieSchedulePage" Loaded="SerieSchedulePage_Loaded">
 
     <Grid Margin="0,0,2,0">
         <Grid.RowDefinitions>
