--- a/KnatteliganWPF/CreateLeaguePage.xaml
+++ b/KnatteliganWPF/CreateLeaguePage.xaml
@@ -7,7 +7,7 @@
         xmlns:validationRules="clr-namespace:KnatteliganWPF.ValidationRules"
         xmlns:converters="clr-namespace:KnatteliganWPF.Converters"
         mc:Ignorable="d"
-        Title="CreateLeaguePage" Height="400" Width="400">
+        Title="CreateLeaguePage" Height="400" Width="400" Loaded="Page_Loaded">
     <Page.Resources>
         <converters:LeagueNameToStringConverter x:Key="LeagueNameToStringConverter"/>
         <converters:IsEnabledConverter x:Key="IsEnabledConverter"/>
@@ -52,17 +52,26 @@
             </TextBox.Text>
         </TextBox>
 
-        <TextBlock Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="3" Margin="0, 5">Add TeamIds (Maximum 16 and only even amounts)</TextBlock>
+        <TextBlock Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="3" Margin="0, 5">Add Teams (Maximum 16 and only even amounts)</TextBlock>
 
         <ListBox Name="TeamList" Grid.ColumnSpan="4" Grid.RowSpan="5" Grid.Row="4" Grid.Column="0"/>
 
-        <Button Name="EditBtn" IsEnabled="{Binding ElementName=TeamList, Path=SelectedItems.Count}"  Grid.Row="9"  Grid.Column="0" Margin="0,0,10,10" Click="Edit_Click" >Edit</Button>
+        <Button Name="EditBtn" IsEnabled="{Binding ElementName=TeamList, Path=SelectedItems.Count}"  Grid.Row="9"  Grid.Column="0" Margin="0,0,10,10" Click="EditTeam_Click" >Edit</Button>
         <Button Name="RemoveTeamBtn" IsEnabled="{Binding ElementName=TeamList, Path=SelectedItems.Count}"  Grid.Row="9" Grid.Column="3" Click="RemoveTeam_Click" Margin="0,0,23,10">-</Button>
         <Button Grid.Row="9" Grid.Column="3" Click="AddTeam_Clicked" Margin="30,0,0,10" RenderTransformOrigin="1.179,1.5">+</Button>
 
         <Button Grid.Row="12" Grid.Column="5" Margin="5" Click="CloseCommandHandler_Click">Cancel</Button>
-        
+
         <Button Name="AddLeagueButton" Grid.Row="12" Grid.Column="6"  Margin="5" Content="Add" Click="AddLeague_Click">
+            <Button.IsEnabled>
+                <MultiBinding Converter="{StaticResource IsEnabledConverter}">
+                    <Binding ElementName="leagueName" Path="(Validation.Errors)[0]"/>
+                    <Binding ElementName="leagueName" Path="Text"/>
+                    <Binding ElementName="TeamList" Path="Items.Count"/>
+                </MultiBinding>
+            </Button.IsEnabled>
+        </Button>
+        <Button Name="EditLeagueBtn" Grid.Row="12" Grid.Column="6"  Margin="4.667,4.667,5,3" Content="Save" Click="SaveEditLeagueBtn_Click">
             <Button.IsEnabled>
                 <MultiBinding Converter="{StaticResource IsEnabledConverter}">
                     <Binding ElementName="leagueName" Path="(Validation.Errors)[0]"/>
