--- a/KnatteliganWPF/AddTeamWindow.xaml
+++ b/KnatteliganWPF/AddTeamWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="KnatteliganWPF.AddTeamWindow"
+﻿<Controls:MetroWindow x:Class="KnatteliganWPF.AddTeamWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,9 +6,12 @@
         xmlns:local="clr-namespace:KnatteliganWPF"
         xmlns:validationRules="clr-namespace:KnatteliganWPF.ValidationRules"
         xmlns:converters="clr-namespace:KnatteliganWPF.Converters"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
         Activated="AddTeamWindowActivated"
-        Title="AddTeamWindow" Height="400" Width="400">
+        Title="Team" Height="400" Width="400"
+                      ResizeMode="NoResize">
+
     <Window.Resources>
         <converters:EmailToStringConverter x:Key="EmailToStringConverter"/>
         <converters:TeamNameToStringConverter x:Key="TeamNameToStringConverter"/>
@@ -35,116 +38,118 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition/>
+
+
         </Grid.ColumnDefinitions>
-        <TextBlock Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1">Teamname:</TextBlock>
-        <TextBox Name="TeamNameTxt" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2"
+
+
+        <StackPanel Orientation="Vertical" Grid.Column="0" Grid.RowSpan="8" Margin="10">
+            <TextBlock>Team Name</TextBlock>
+            <TextBox Name="TeamNameTxt"
                  ToolTip="{Binding ElementName=TeamNameTxt, Path=(Validation.Errors)[0].ErrorContent}">
-            <TextBox.Text>
-                <Binding Path="TeamName" UpdateSourceTrigger="PropertyChanged"
+                <TextBox.Text>
+                    <Binding Path="TeamName" UpdateSourceTrigger="PropertyChanged"
                          Converter="{StaticResource TeamNameToStringConverter}">
-                    <Binding.ValidationRules>
-                        <validationRules:TeamNameValidationRule/>
-                    </Binding.ValidationRules>
-                </Binding>
-            </TextBox.Text>
-        </TextBox>
+                        <Binding.ValidationRules>
+                            <validationRules:TeamNameValidationRule/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
 
-        <TextBlock Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="3">Players</TextBlock>
-        <ListBox Name="PlayerList" Grid.ColumnSpan="4" Grid.RowSpan="4" Grid.Row="4" Grid.Column="0"/>
+            <TextBlock>Players</TextBlock>
+            <ListBox Name="PlayerList"/>
+            <StackPanel Orientation="Horizontal">
+                <Button Margin="0,5,0,0" Click="AddPlayer_Clicked">+</Button>
+                <Button Margin="0,5,0,0" Name="RemovePlayerBtn" IsEnabled="{Binding ElementName=PlayerList, Path=SelectedItems.Count}" Click="RemovePlayerBtn_Click">-</Button>
+                <Button Margin="0,5,0,0" Name="EditPlayerBtn" IsEnabled="{Binding ElementName=PlayerList, Path=SelectedItems.Count}" Click="EditPlayerBtn_Click" >Edit</Button>
+            </StackPanel>
+        </StackPanel>
 
-        <TextBlock Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="2">Coach name</TextBlock>
-        <TextBox Name="CoachNameTextBox" Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="3"
+        <StackPanel Orientation="Vertical" Margin="10" Grid.Row="0" Grid.Column="1" Grid.RowSpan="8">
+            <TextBlock>Team Leader</TextBlock>
+            <TextBox Name="CoachNameTextBox"
                  ToolTip="{Binding ElementName=CoachNameTextBox, Path=(Validation.Errors)[0].ErrorContent}">
-            <TextBox.Text>
-                <Binding Path="PersonName" UpdateSourceTrigger="PropertyChanged"
+                <TextBox.Text>
+                    <Binding Path="PersonName" UpdateSourceTrigger="PropertyChanged"
                          Converter="{StaticResource PersonNameToStringConverter}">
-                    <Binding.ValidationRules>
-                        <validationRules:PersonNameValidationRule/>
-                    </Binding.ValidationRules>
-                </Binding>
-            </TextBox.Text>
-        </TextBox>
-        <TextBlock Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="4">Personal number</TextBlock>
-        <TextBox Name="PersonalNumberTextBox" Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="5"
+                        <Binding.ValidationRules>
+                            <validationRules:PersonNameValidationRule/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
+            <TextBlock >Personal Number</TextBlock>
+            <TextBox Name="PersonalNumberTextBox" 
                  ToolTip="{Binding ElementName=PersonalNumberTextBox, Path=(Validation.Errors)[0].ErrorContent}">
-            <TextBox.Text>
-                <Binding Path="PersonalNumber" UpdateSourceTrigger="PropertyChanged" >
-                    <Binding.ValidationRules>
-                        <validationRules:PersonalNumberValidationRule/>
-                    </Binding.ValidationRules>
-                </Binding>
-            </TextBox.Text>
-        </TextBox>
+                <TextBox.Text>
+                    <Binding Path="PersonalNumber" UpdateSourceTrigger="PropertyChanged" >
+                        <Binding.ValidationRules>
+                            <validationRules:PersonalNumberValidationRule/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
 
-        <TextBlock Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="6">PhoneNo</TextBlock>
-        <TextBox Name="PhoneNumberTextBox" Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="7"
+            <TextBlock>Phone Number</TextBlock>
+            <TextBox Name="PhoneNumberTextBox" Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="7"
                  ToolTip="{Binding ElementName=PhoneNumberTextBox, Path=(Validation.Errors)[0].ErrorContent}">
-            <TextBox.Text>
-                <Binding Path="PhoneNumber" UpdateSourceTrigger="PropertyChanged"
+                <TextBox.Text>
+                    <Binding Path="PhoneNumber" UpdateSourceTrigger="PropertyChanged"
                          Converter="{StaticResource PhoneNumberToStringConverter}">
-                    <Binding.ValidationRules>
-                        <validationRules:PhoneNumberValidationRule/>
-                    </Binding.ValidationRules>
-                </Binding>
-            </TextBox.Text>
-        </TextBox>
+                        <Binding.ValidationRules>
+                            <validationRules:PhoneNumberValidationRule/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
 
-        <TextBlock Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="8">Email</TextBlock>
-        <TextBox Name="CoachEmailTextBox" Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="9"
+            <TextBlock>Email</TextBlock>
+            <TextBox Name="CoachEmailTextBox"
         ToolTip="{Binding ElementName=CoachEmailTextBox, Path=(Validation.Errors)[0].ErrorContent}">
-            <TextBox.Text>
-                <Binding Path="Email" UpdateSourceTrigger="PropertyChanged"
+                <TextBox.Text>
+                    <Binding Path="Email" UpdateSourceTrigger="PropertyChanged"
                          Converter="{StaticResource EmailToStringConverter}">
-                    <Binding.ValidationRules>
-                        <validationRules:EmailValidationRule/>
-                    </Binding.ValidationRules>
-                </Binding>
-            </TextBox.Text>
-        </TextBox>
+                        <Binding.ValidationRules>
+                            <validationRules:EmailValidationRule/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
+        </StackPanel>
 
-        <Button Name="EditPlayerBtn" IsEnabled="{Binding ElementName=PlayerList, Path=SelectedItems.Count}"  Grid.Row="8"  Grid.Column="0" Grid.RowSpan="1"  Margin="5" Click="EditPlayerBtn_Click" >Edit</Button>
+        <StackPanel Orientation="Horizontal" Grid.Row="11" Grid.Column="1" Grid.RowSpan="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,10,10,10">
+            <Button x:Name="SaveEditBtn" Content="Save" Click="SaveEditBtn_Click">
+                <Button.IsEnabled>
+                    <MultiBinding Converter="{StaticResource IsEnabledConverter}">
+                        <Binding ElementName="TeamNameTxt" Path="(Validation.Errors)[0]"/>
+                        <Binding ElementName="TeamNameTxt" Path="Text"/>
+                        <Binding ElementName="CoachNameTextBox" Path="(Validation.Errors)[0]"/>
+                        <Binding ElementName="PersonalNumberTextBox" Path="(Validation.Errors)[0]"/>
+                        <Binding ElementName="PhoneNumberTextBox" Path="(Validation.Errors)[0]"/>
+                        <Binding ElementName="CoachEmailTextBox" Path="(Validation.Errors)[0]"/>
+                    </MultiBinding>
+                </Button.IsEnabled>
+            </Button>
+            <Button Click="CloseCommandHandler_Clicked" Content="Cancel"/>
 
-        <Button Name="RemovePlayerBtn" IsEnabled="{Binding ElementName=PlayerList, Path=SelectedItems.Count}" Grid.Row="8" Grid.Column="2" Margin="5" Click="RemovePlayerBtn_Click">-</Button>
-        
-        <Button Grid.Row="8" Grid.Column="3"  Margin="5" Click="AddPlayer_Clicked">+</Button>
-
-        <Button Grid.Row="12" Grid.Column="3" Margin="5" Grid.ColumnSpan="2" Click="CloseCommandHandler_Clicked">Cancel</Button>
-        
-        <Button Name="AddTeamBtn"  Grid.Row="12" Grid.Column="5"  Margin="5" Content="AddTeam" Grid.ColumnSpan="2" Click="AddTeam_Clicked">
-            <Button.IsEnabled>
-                <MultiBinding Converter="{StaticResource IsEnabledConverter}">
-                    <Binding ElementName="TeamNameTxt" Path="(Validation.Errors)[0]"/>
-                    <Binding ElementName="TeamNameTxt" Path="Text"/>
-                    <Binding ElementName="CoachNameTextBox" Path="(Validation.Errors)[0]"/>
-                    <Binding ElementName="CoachNameTextBox" Path="Text"/>
-                    <Binding ElementName="PersonalNumberTextBox" Path="(Validation.Errors)[0]"/>
-                    <Binding ElementName="PersonalNumberTextBox" Path="Text"/>
-                    <Binding ElementName="PhoneNumberTextBox" Path="(Validation.Errors)[0]"/>
-                    <Binding ElementName="PhoneNumberTextBox" Path="Text"/>
-                    <Binding ElementName="CoachEmailTextBox" Path="(Validation.Errors)[0]"/>
-                    <Binding ElementName="CoachEmailTextBox" Path="Text"/>
-                    <Binding ElementName="PlayerList" Path="Items.Count"/>
-                </MultiBinding>
-            </Button.IsEnabled>
-        </Button>
-        
-        <Button Name="SaveEditBtn" Grid.ColumnSpan="2" Content="Save" Grid.Column="5" HorizontalAlignment="Left" Grid.Row="12" VerticalAlignment="Top" Width="102" Click="SaveEditBtn_Click" Margin="5.333,5,0,0" Height="19">
-            <Button.IsEnabled>
-                <MultiBinding Converter="{StaticResource IsEnabledConverter}">
-                    <Binding ElementName="TeamNameTxt" Path="(Validation.Errors)[0]"/>
-                    <Binding ElementName="TeamNameTxt" Path="Text"/>
-                    <Binding ElementName="CoachNameTextBox" Path="(Validation.Errors)[0]"/>
-                    <Binding ElementName="PersonalNumberTextBox" Path="(Validation.Errors)[0]"/>
-                    <Binding ElementName="PhoneNumberTextBox" Path="(Validation.Errors)[0]"/>
-                    <Binding ElementName="CoachEmailTextBox" Path="(Validation.Errors)[0]"/>
-                </MultiBinding>
-            </Button.IsEnabled>
-        </Button>
-
+            <Button Name="AddTeamBtn" Margin="0" Content="Add" Click="AddTeam_Clicked" HorizontalAlignment="Right">
+                <Button.IsEnabled>
+                    <MultiBinding Converter="{StaticResource IsEnabledConverter}">
+                        <Binding ElementName="TeamNameTxt" Path="(Validation.Errors)[0]"/>
+                        <Binding ElementName="TeamNameTxt" Path="Text"/>
+                        <Binding ElementName="CoachNameTextBox" Path="(Validation.Errors)[0]"/>
+                        <Binding ElementName="CoachNameTextBox" Path="Text"/>
+                        <Binding ElementName="PersonalNumberTextBox" Path="(Validation.Errors)[0]"/>
+                        <Binding ElementName="PersonalNumberTextBox" Path="Text"/>
+                        <Binding ElementName="PhoneNumberTextBox" Path="(Validation.Errors)[0]"/>
+                        <Binding ElementName="PhoneNumberTextBox" Path="Text"/>
+                        <Binding ElementName="CoachEmailTextBox" Path="(Validation.Errors)[0]"/>
+                        <Binding ElementName="CoachEmailTextBox" Path="Text"/>
+                        <Binding ElementName="PlayerList" Path="Items.Count"/>
+                    </MultiBinding>
+                </Button.IsEnabled>
+            </Button>
+        </StackPanel>
     </Grid>
-</Window>
+</Controls:MetroWindow>
