--- a/KnatteliganWPF/MainPage.xaml
+++ b/KnatteliganWPF/MainPage.xaml
@@ -4,8 +4,9 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
+      d:DesignHeight="450" d:DesignWidth="625"
       Title="MainPage">
+    
 
     <Grid>
         <Grid.RowDefinitions>
@@ -22,11 +23,12 @@
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
+        <StackPanel Grid.Row="2" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <TextBlock FontWeight="Bold" Margin="5" >Leagues</TextBlock>
 
-        <TextBlock Grid.Row ="2" FontWeight="Bold" >Manage existing leagues:</TextBlock>
-
-        <ListBox Name="LeagueList" Grid.Row="4" Grid.Column="0" Margin="5" MinWidth="150" MinHeight="200" MouseDoubleClick="ManageLeague_Clicked"/>
-        <Button Grid.Column="1" Margin="225,176,10,10" Grid.Row="4" Click="CreateLeague_Clicked" MaxHeight="20">Create a new league</Button>
+            <ListBox Name="LeagueList" Margin="5" MinWidth="150" MinHeight="200" MouseDoubleClick="ManageLeague_Clicked" BorderThickness="1"/>
+            <Button Click="CreateLeague_Clicked" MaxHeight="20" Margin="5">Create a new league</Button>
+        </StackPanel>
     </Grid>
 
 </Page>
