--- a/KnatteliganWPF/AddTeamWindow.xaml
+++ b/KnatteliganWPF/AddTeamWindow.xaml
@@ -24,19 +24,9 @@
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="360"/>
+            <RowDefinition Height="40"/>
+
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -61,7 +51,7 @@
             </TextBox>
 
             <TextBlock>Players</TextBlock>
-            <ListBox Name="PlayerList"/>
+            <ListBox Name="PlayerList" Height="250"/>
             <StackPanel Orientation="Horizontal">
                 <Button Margin="0,5,0,0" Click="AddPlayer_Clicked">+</Button>
                 <Button Margin="0,5,0,0" Name="RemovePlayerBtn" IsEnabled="{Binding ElementName=PlayerList, Path=SelectedItems.Count}" Click="RemovePlayerBtn_Click">-</Button>
@@ -69,7 +59,7 @@
             </StackPanel>
         </StackPanel>
 
-        <StackPanel Orientation="Vertical" Margin="10" Grid.Row="0" Grid.Column="1" Grid.RowSpan="8">
+        <StackPanel Orientation="Vertical" Margin="10" Grid.Row="0" Grid.Column="1">
             <TextBlock>Team Leader</TextBlock>
             <TextBox Name="CoachNameTextBox"
                  ToolTip="{Binding ElementName=CoachNameTextBox, Path=(Validation.Errors)[0].ErrorContent}">
@@ -121,7 +111,7 @@
             </TextBox>
         </StackPanel>
 
-        <StackPanel Orientation="Horizontal" Grid.Row="11" Grid.Column="1" Grid.RowSpan="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,10,10,10">
+        <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="5">
             <Button x:Name="SaveEditBtn" Content="Save" Click="SaveEditBtn_Click">
                 <Button.IsEnabled>
                     <MultiBinding Converter="{StaticResource IsEnabledConverter}">
